--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -7802,7 +7802,7 @@
 "~^/doc/www/www.gresearch.co.uk/favicon.ico.*$" "https://www.gresearch.co.uk/wp-content/uploads/2019/12/cropped-favi-32x32.png";
 "~^/doc/psychology/2005-patrick-handbookpsychopathy\.pdf.*$" "https://www.guilford.com/books/Handbook-of-Psychopathy/Christopher-Patrick/9781593855918/reviews";
 "~^/Sodom-and-Gomorrah,-Texas$" "https://www.gutenberg.org/files/23161/23161-h/23161-h.htm";
-"~^/GPT-3Movies.*$" "https://gwern.net/GPT-3-nonfiction#moviebook-plot-summaries";
+"~^/GPT-3Movies.*$" "/GPT-3-nonfiction#moviebook-plot-summaries";
 "~^/Cabal.*$" "https://www.haskell.org/cabal/";
 "~^/journals/ecam.*$" "https://www.hindawi.com/journals/ecam/";
 "~^/Harry-Potter-and-the-Methods-of-Rationality.*$" "https://www.hpmor.com/";
@@ -9379,7 +9379,7 @@
 "~^/cats$" "/tags/cats";
 "~^/tags/causalit$" "/tags/causality";
 "~^/charity$" "/tags/charity";
-"~^/computer-science$" "/tags/computer-science";
+"~^/computer-science$" "/doc/cs/index";
 "~^/literary-criticism$" "/tags/criticism";
 "~^/doc/cs/tags/cryptography$" "/tags/cryptography";
 "~^/CS$" "/tags/CS";
@@ -9563,75 +9563,75 @@
 "~^/new$" "/changelog";
 "~^/rss/$" "https://gwern.substack.com/feed";
 "~^/static/linkmetadata.o.*$" "/static/build/LinkMetadata.hs";
-"~^/ttps://gwern.net/AB-testing$" "https://gwern.net/AB-testing";
-"~^/ttps://gwern.net/Backstop$" "https://gwern.net/Backstop";
-"~^/ttps://gwern.net/Beauty$" "https://gwern.net/Beauty";
-"~^/ttps://gwern.net/CO2-Coin$" "https://gwern.net/CO2-Coin";
-"~^/ttps://gwern.net/CYOA$" "https://gwern.net/CYOA";
-"~^/ttps://gwern.net/Changelog$" "https://gwern.net/Changelog";
-"~^/ttps://gwern.net/Collecting$" "https://gwern.net/Collecting";
-"~^/ttps://gwern.net/Computers$" "https://gwern.net/Computers";
-"~^/ttps://gwern.net/Design$" "https://gwern.net/Design";
-"~^/ttps://gwern.net/Design-graveyard$" "https://gwern.net/Design-graveyard";
-"~^/ttps://gwern.net/Earwax$" "https://gwern.net/Earwax";
-"~^/ttps://gwern.net/Faces$" "https://gwern.net/face";
-"~^/ttps://gwern.net/Fake-Journal-Club$" "https://gwern.net/Fake-Journal-Club";
-"~^/ttps://gwern.net/Fonts$" "https://gwern.net/Fonts";
-"~^/ttps://gwern.net/Forking-Paths$" "https://gwern.net/Forking-Paths";
-"~^/ttps://gwern.net/GPT-2$" "https://gwern.net/GPT-2";
-"~^/ttps://gwern.net/GPT-2-preference-learning$" "https://gwern.net/GPT-2-preference-learning";
-"~^/ttps://gwern.net/GPT-3$" "https://gwern.net/GPT-3";
-"~^/ttps://gwern.net/GPT-3-nonfiction$" "https://gwern.net/GPT-3-nonfiction";
-"~^/ttps://gwern.net/LARPing$" "https://gwern.net/LARPing";
-"~^/ttps://gwern.net/Leprechauns$" "https://gwern.net/Leprechauns";
-"~^/ttps://gwern.net/Littlewood-origin$" "https://gwern.net/Littlewood-origin";
-"~^/ttps://gwern.net/MLP-genetics$" "https://gwern.net/MLP-genetics";
-"~^/ttps://gwern.net/Mouse-Utopia$" "https://gwern.net/Mouse-Utopia";
-"~^/ttps://gwern.net/Notes$" "https://gwern.net/Notes";
-"~^/ttps://gwern.net/Problem-14$" "https://gwern.net/Problem-14";
-"~^/ttps://gwern.net/Questions$" "https://gwern.net/Questions";
-"~^/ttps://gwern.net/SMPY$" "https://gwern.net/SMPY";
-"~^/ttps://gwern.net/Scaling-hypothesis$" "https://gwern.net/Scaling-hypothesis";
-"~^/ttps://gwern.net/Screwfly$" "https://gwern.net/Screwfly";
-"~^/ttps://gwern.net/Selection$" "https://gwern.net/Selection";
-"~^/ttps://gwern.net/Sort$" "https://gwern.net/Sort";
-"~^/ttps://gwern.net/Startup-ideas$" "https://gwern.net/Startup-ideas";
-"~^/ttps://gwern.net/Timing$" "https://gwern.net/Timing";
-"~^/ttps://gwern.net/Tool-AI$" "https://gwern.net/Tool-AI";
-"~^/ttps://gwern.net/Turing-complete$" "https://gwern.net/Turing-complete";
-"~^/ttps://gwern.net/Unseeing$" "https://gwern.net/Unseeing";
-"~^/ttps://gwern.net/Variables$" "https://gwern.net/Variables";
-"~^/ttps://gwern.net/Water$" "https://gwern.net/Water";
-"~^/ttps://gwern.net/notes/Attention$" "https://gwern.net/notes/Attention";
-"~^/ttps://gwern.net/notes/Competence$" "https://gwern.net/notes/Competence";
-"~^/ttps://gwern.net/notes/FC$" "https://gwern.net/notes/FC";
-"~^/ttps://gwern.net/notes/Fashion$" "https://gwern.net/notes/Fashion";
-"~^/ttps://gwern.net/notes/Faster$" "https://gwern.net/notes/Faster";
-"~^/ttps://gwern.net/notes/Fermi$" "https://gwern.net/notes/Fermi";
-"~^/ttps://gwern.net/notes/Lions$" "https://gwern.net/notes/Lions";
-"~^/ttps://gwern.net/notes/Lizardman-constant$" "https://gwern.net/notes/Lizardman-constant";
-"~^/ttps://gwern.net/notes/Local-optima$" "https://gwern.net/notes/Local-optima";
-"~^/ttps://gwern.net/notes/Parasocial$" "https://gwern.net/notes/Parasocial";
-"~^/ttps://gwern.net/notes/Pipeline$" "https://gwern.net/notes/Pipeline";
-"~^/ttps://gwern.net/notes/Ramsey$" "https://gwern.net/notes/Ramsey";
-"~^/ttps://gwern.net/notes/Regression$" "https://gwern.net/notes/Regression";
-"~^/ttps://gwern.net/notes/Scaling$" "https://gwern.net/notes/Scaling";
-"~^/ttps://gwern.net/notes/Small-groups$" "https://gwern.net/notes/Small-groups";
-"~^/ttps://gwern.net/notes/TBI$" "https://gwern.net/notes/TBI";
-"~^/ttps://gwern.net/notes/Variance-components$" "https://gwern.net/notes/Variance-components";
-"~^/ttps://gwern.net/reviews/ARPA$" "https://gwern.net/reviews/ARPA";
-"~^/ttps://gwern.net/reviews/Anime$" "https://gwern.net/reviews/Anime";
-"~^/ttps://gwern.net/reviews/Bakewell$" "https://gwern.net/reviews/Bakewell";
-"~^/ttps://gwern.net/reviews/Bakker$" "https://gwern.net/reviews/Bakker";
-"~^/ttps://gwern.net/reviews/Books$" "https://gwern.net/reviews/Books";
-"~^/ttps://gwern.net/reviews/Cat-Sense$" "https://gwern.net/reviews/Cat-Sense";
-"~^/ttps://gwern.net/reviews/Cultural-Revolution$" "https://gwern.net/reviews/Cultural-Revolution";
-"~^/ttps://gwern.net/reviews/MLP$" "https://gwern.net/reviews/MLP";
-"~^/ttps://gwern.net/reviews/McNamara$" "https://gwern.net/reviews/McNamara";
-"~^/ttps://gwern.net/reviews/Movies$" "https://gwern.net/reviews/Movies";
-"~^/ttps://gwern.net/reviews/Operas$" "https://gwern.net/reviews/Operas";
-"~^/ttps://gwern.net/reviews/Umineko$" "https://gwern.net/reviews/Umineko";
-"~^/ttps://gwern.net/reviews/cat$" "https://gwern.net/reviews/cat";
+"~^/ttps://gwern.net/AB-testing$" "/AB-testing";
+"~^/ttps://gwern.net/Backstop$" "/Backstop";
+"~^/ttps://gwern.net/Beauty$" "/Beauty";
+"~^/ttps://gwern.net/CO2-Coin$" "/CO2-Coin";
+"~^/ttps://gwern.net/CYOA$" "/CYOA";
+"~^/ttps://gwern.net/Changelog$" "/Changelog";
+"~^/ttps://gwern.net/Collecting$" "/Collecting";
+"~^/ttps://gwern.net/Computers$" "/computers";
+"~^/ttps://gwern.net/Design$" "/Design";
+"~^/ttps://gwern.net/Design-graveyard$" "/Design-graveyard";
+"~^/ttps://gwern.net/Earwax$" "/Earwax";
+"~^/ttps://gwern.net/Faces$" "/face";
+"~^/ttps://gwern.net/Fake-Journal-Club$" "/Fake-Journal-Club";
+"~^/ttps://gwern.net/Fonts$" "/Fonts";
+"~^/ttps://gwern.net/Forking-Paths$" "/Forking-Paths";
+"~^/ttps://gwern.net/GPT-2$" "/GPT-2";
+"~^/ttps://gwern.net/GPT-2-preference-learning$" "/GPT-2-preference-learning";
+"~^/ttps://gwern.net/GPT-3$" "/GPT-3";
+"~^/ttps://gwern.net/GPT-3-nonfiction$" "/GPT-3-nonfiction";
+"~^/ttps://gwern.net/LARPing$" "/LARPing";
+"~^/ttps://gwern.net/Leprechauns$" "/Leprechauns";
+"~^/ttps://gwern.net/Littlewood-origin$" "/Littlewood-origin";
+"~^/ttps://gwern.net/MLP-genetics$" "/MLP-genetics";
+"~^/ttps://gwern.net/Mouse-Utopia$" "/Mouse-Utopia";
+"~^/ttps://gwern.net/Notes$" "/Notes";
+"~^/ttps://gwern.net/Problem-14$" "/Problem-14";
+"~^/ttps://gwern.net/Questions$" "/Questions";
+"~^/ttps://gwern.net/SMPY$" "/SMPY";
+"~^/ttps://gwern.net/Scaling-hypothesis$" "/Scaling-hypothesis";
+"~^/ttps://gwern.net/Screwfly$" "/Screwfly";
+"~^/ttps://gwern.net/Selection$" "/Selection";
+"~^/ttps://gwern.net/Sort$" "/Sort";
+"~^/ttps://gwern.net/Startup-ideas$" "/Startup-ideas";
+"~^/ttps://gwern.net/Timing$" "/Timing";
+"~^/ttps://gwern.net/Tool-AI$" "/Tool-AI";
+"~^/ttps://gwern.net/Turing-complete$" "/Turing-complete";
+"~^/ttps://gwern.net/Unseeing$" "/Unseeing";
+"~^/ttps://gwern.net/Variables$" "/Variables";
+"~^/ttps://gwern.net/Water$" "/Water";
+"~^/ttps://gwern.net/notes/Attention$" "/notes/Attention";
+"~^/ttps://gwern.net/notes/Competence$" "/notes/Competence";
+"~^/ttps://gwern.net/notes/FC$" "/notes/FC";
+"~^/ttps://gwern.net/notes/Fashion$" "/notes/Fashion";
+"~^/ttps://gwern.net/notes/Faster$" "/notes/Faster";
+"~^/ttps://gwern.net/notes/Fermi$" "/notes/Fermi";
+"~^/ttps://gwern.net/notes/Lions$" "/notes/Lions";
+"~^/ttps://gwern.net/notes/Lizardman-constant$" "/notes/Lizardman-constant";
+"~^/ttps://gwern.net/notes/Local-optima$" "/notes/Local-optima";
+"~^/ttps://gwern.net/notes/Parasocial$" "/notes/Parasocial";
+"~^/ttps://gwern.net/notes/Pipeline$" "/notes/Pipeline";
+"~^/ttps://gwern.net/notes/Ramsey$" "/notes/Ramsey";
+"~^/ttps://gwern.net/notes/Regression$" "/notes/Regression";
+"~^/ttps://gwern.net/notes/Scaling$" "/notes/Scaling";
+"~^/ttps://gwern.net/notes/Small-groups$" "/notes/Small-groups";
+"~^/ttps://gwern.net/notes/TBI$" "/notes/TBI";
+"~^/ttps://gwern.net/notes/Variance-components$" "/notes/Variance-components";
+"~^/ttps://gwern.net/reviews/ARPA$" "/reviews/ARPA";
+"~^/ttps://gwern.net/reviews/Anime$" "/reviews/Anime";
+"~^/ttps://gwern.net/reviews/Bakewell$" "/reviews/Bakewell";
+"~^/ttps://gwern.net/reviews/Bakker$" "/reviews/Bakker";
+"~^/ttps://gwern.net/reviews/Books$" "/reviews/Books";
+"~^/ttps://gwern.net/reviews/Cat-Sense$" "/reviews/Cat-Sense";
+"~^/ttps://gwern.net/reviews/Cultural-Revolution$" "/reviews/Cultural-Revolution";
+"~^/ttps://gwern.net/reviews/MLP$" "/reviews/MLP";
+"~^/ttps://gwern.net/reviews/McNamara$" "/reviews/McNamara";
+"~^/ttps://gwern.net/reviews/Movies$" "/reviews/Movies";
+"~^/ttps://gwern.net/reviews/Operas$" "/reviews/Operas";
+"~^/ttps://gwern.net/reviews/Umineko$" "/reviews/Umineko";
+"~^/ttps://gwern.net/reviews/cat$" "/reviews/cat";
 "~^/Archiving-URL.*$" "/archiving";
 "~^/Book-review.*$" "/review/book";
 "~^/doc/2002-notenki-memoirs.html.*$" "/doc/eva/2002-takeda-notenkimemoirs";
@@ -10435,7 +10435,7 @@
 "~^/Collecting\?ref=sonya-supposedly$" "/collecting";
 "~^/complementuqoyrt$" "/complement";
 "~^/Complexity-vs$" "/complexity-vs-ai";
-"~^/computers/computers-all-the-way-down$" "/computers";
+"~^/computers/.*$" "/computers";
 "~^/Conscientiousness-and-online-education\?2$" "/conscientiousness-and-online-education";
 "~^/Culture-is-not-about-esthetics$" "/culture-is-not-about-esthetics";
 "~^/CYOA\?hmsr=joyk.com&utm_source=joyk.com&utm_medium=referral$" "/cyoa";
@@ -11715,6 +11715,7 @@
 "~^/doc/anime/eva/1996-newtype-anno-interviewi.*$" "/doc/anime/eva/1996-newtype-anno-interview";
 "~^/scaling-hypothethis.*$" "/scaling-hypothesis";
 "~^/Computers?.*$" "/computers";
+"~^/computer$" "/computers";
 "~^/page\?.*$" "/index";
 "~^/doc/zeo/2017-boland.pdfantidepress.*$" "/doc/zeo/2017-boland.pdf";
 "~^/doc/.*/[Hh]unter$" "/hunter";
@@ -14500,7 +14501,7 @@
 "~^/doc/2012-heussler\.pdf.*$" "/doc/melatonin/2012-heussler.pdf";
 "~^/doc/technology/2018-07-25-0$" "/doc/technology/2018-07-25-johnbackus-howdecentralizationevolves.html";
 "~^/Improvment$" "/improvement";
-"~^/doc/www/www.google.com/favicon.ico$" "https://gwern.net/favicon.ico";
+"~^/doc/www/www.google.com/favicon.ico$" "/favicon.ico";
 "~^/Turing-complet$" "/turing-complete";
 "~^/doc/sociology/2022-yaun.pdf.*$" "/doc/sociology/2022-yuan.pdf";
 "~^/doc/sociology/2023-yaun.pdf.*$" "/doc/sociology/2022-yuan.pdf";
@@ -14955,6 +14956,23 @@
 "~^/[Cc]atitecthure.*$" "/catitecture";
 "~^/[Cc]atecture.*$" "/catitecture";
 "~^/doc/food/2013-piquerasfiszman.pdf.*$" "/doc/food/2011-piquerasfiszman.pdf";
+"~^/doc/cat/silvervine/$" "/doc/cat/psychology/drug/silvervine/index";
+"~^/doc/cat/psychology/Mj.*$" "/doc/cat/psychology/index";
+"~^/doc/darknet-market/2013-06-07$" "/doc/darknet-market/index";
+"~^/hofstadter/$" "/doc/existential-risk/nuclear/hofstadter/index";
+"~^/doc/nootropic/2020-haden\.pdf.*$" "/doc/psychedelic/2020-haden.pdf";
+"~^/doc/psychology/pe$" "/doc/psychology/personality/index";
+"~^/1961-raiffa-appliedstatisticaldecisiontheory\.pdf.*$" "/doc/statistics/decision/1961-raiffa-appliedstatisticaldecisiontheory.pdf";
+"~^/doc/wikipedia/2023-09-30-gwern-wikipedia-unusedacronymns-threeletterandfourletter.txt$" "/doc/wikipedia/2023-09-30-gwern-wikipedia-unusedacronyms-threeletterandfourletter.txt";
+"~^/doc/technology/www/arxiv.org/84cee1627f4c8cc7cd022052caf14e591d3043b2\.pdf.*$" "/doc/www/arxiv.org/84cee1627f4c8cc7cd022052caf14e591d3043b2.pdf";
+"~^/doc/ai/anime/www/eare.eu/915d1a4f9bca5a41c915d7ae412f9349a067e19c.html$" "/doc/www/eare.eu/915d1a4f9bca5a41c915d7ae412f9349a067e19c.html";
+"~^/doc/economics/automation/www/nbloom.people.stanford.edu/a80b01c8ea89dfe9bb1ff4f7f932d4f7b4a6a5e4\.pdf.*$" "/doc/www/nbloom.people.stanford.edu/a80b01c8ea89dfe9bb1ff4f7f932d4f7b4a6a5e4.pdf";
+"~^/doc/science/www/quello.msu.edu/16f130eea10d7589d7cc55cba17df0ff579e67d8\.pdf.*$" "/doc/www/quello.msu.edu/16f130eea10d7589d7cc55cba17df0ff579e67d8.pdf";
+"~^/.*/Modus$" "/modus";
+"~^/note/lizard-man$" "/note/lizardman";
+"~^/note/lizard$" "/note/lizardman";
+"~^/Research-criticis$" "/research-criticism";
+"~^/doc/nootropic/favicon.ico$" "/static/img/favicon.ico";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
@@ -20638,6 +20656,16 @@
 "~^///about.php.*$" "/static/404";
 "~^/building/backmgr/.*$" "/static/404";
 "~^/[Oo]rg/service/.*$" "/static/404";
+"~^/SessionRecording.*$" "/static/404";
+"~^/pananhuayhun.*$" "/static/404";
+"~^/traffictools.*$" "/static/404";
+"~^/tomhorm.*$" "/static/404";
+"~^/shemal.*$" "/static/404";
+"~^/megadeal.*$" "/static/404";
+"~^/.*betstocklotto.*$" "/static/404";
+"~^/bandar5.*$" "/static/404";
+"~^/7\.0-MB.*$" "/static/404";
+"~^/5\.6-MB.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
