--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9916,3 +9916,4 @@ default "";
 "~^/static/img/icon/uptontea.svg.*$" "/static/img/icon/upton-tea.svg";
 "~^/static/img/icon/washingtonpost.svg.*$" "/static/img/icon/washington-post.svg";
 "~^/static/img/icon/worddoc.svg.*$" "/static/img/icon/word-doc.svg";
+"~^/doc/psychology/animal/bird/2022-vanoverveld.pdf.*$" "/doc/psychology/animal/bird/neuroscience/2021-vanoverveld.pdf";
