--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9917,3 +9917,12 @@ default "";
 "~^/static/img/icon/washingtonpost.svg.*$" "/static/img/icon/washington-post.svg";
 "~^/static/img/icon/worddoc.svg.*$" "/static/img/icon/word-doc.svg";
 "~^/doc/psychology/animal/bird/2022-vanoverveld.pdf.*$" "/doc/psychology/animal/bird/neuroscience/2021-vanoverveld.pdf";
+"~^/doc/statistics/2000-bradlow.pdf.*$" "/doc/statistics/order/capture/2000-bradlow.pdf";
+"~^/doc/statistics/1976-efron.pdf.*$" "/doc/statistics/order/capture/1976-efron.pdf";
+"~^/doc/cat/psychology/2023-11-16-gwern-dalle3-comic-cat-problemofinductiontestingknockingobjectsover.png.*$" "/doc/cat/psychology/2023-11-16-gwern-dalle3-comic-cat-problemofinductiontestingknockingobjectsover.jpg";
+"~^/doc/fiction/science-fiction/1998-chiang-figure-1.png.*$" "/doc/fiction/science-fiction/time-travel/1998-chiang-figure-1.png";
+"~^/doc/fiction/science-fiction/1998-chiang-figure-2.png.*$" "/doc/fiction/science-fiction/time-travel/1998-chiang-figure-2.png";
+"~^/doc/fiction/science-fiction/1998-chiang-figure-3.png.*$" "/doc/fiction/science-fiction/time-travel/1998-chiang-figure-3.png";
+"~^/doc/ai/nn/transformer/gpt/dall-e/3/2023-11-17-gwern-dalle3-grandadmiralthrawn-reachingfortheblacksunandempire-samples-09.jpg.*$" "/doc/ai/nn/transformer/gpt/dall-e/3/2023-11-17-gwern-dalle3-grandadmiralthrawn-reachingfortheblacksunandempire-samples-02.jpg";
+"~^/doc/psychology/personality/2019-mahadevan.pdf.*$" "/doc/psychology/personality/narcissism/2019-mahadevan.pdf";
+"~^/doc/psychology/personality/2022-liu.pdf.*$" "/doc/psychology/personality/narcissism/2022-liu.pdf";
