--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9926,3 +9926,11 @@ default "";
 "~^/doc/ai/nn/transformer/gpt/dall-e/3/2023-11-17-gwern-dalle3-grandadmiralthrawn-reachingfortheblacksunandempire-samples-09.jpg.*$" "/doc/ai/nn/transformer/gpt/dall-e/3/2023-11-17-gwern-dalle3-grandadmiralthrawn-reachingfortheblacksunandempire-samples-02.jpg";
 "~^/doc/psychology/personality/2019-mahadevan.pdf.*$" "/doc/psychology/personality/narcissism/2019-mahadevan.pdf";
 "~^/doc/psychology/personality/2022-liu.pdf.*$" "/doc/psychology/personality/narcissism/2022-liu.pdf";
+"~^/doc/reinforcement-learning/openai/2023-11-22-karaswisher-onsamaltman.html.*$" "/doc/reinforcement-learning/openai/2023-11-22-karaswisher-twitter-onsamaltman.html";
+"~^/doc/reinforcement-learning/openai/2023-11-21-karaswisher-outcomeprediction.html.*$" "/doc/reinforcement-learning/openai/2023-11-21-karaswisher-twitter-outcomeprediction.html";
+"~^/doc/reinforcement-learning/openai/2023-11-21-karaswisher-altmanvstoner.html.*$" "/doc/reinforcement-learning/openai/2023-11-21-karaswisher-twitter-altmanvstoner.html";
+"~^/doc/reinforcement-learning/openai/2023-11-30-brettaylor-todayasboardchair.html.*$" "/doc/reinforcement-learning/openai/2023-11-30-brettaylor-twitter-todayasboardchair.html";
+"~^/doc/reinforcement-learning/openai/2023-11-20-emmettshear-openaiceo.html.*$" "/doc/reinforcement-learning/openai/2023-11-20-emmettshear-twitter-openaiceo.html";
+"~^/doc/reinforcement-learning/openai/2023-11-24-joashuachiam-onsamaltman.html.*$" "/doc/reinforcement-learning/openai/2023-11-24-joashuachiam-twitter-onsamaltman.html";
+"~^/doc/ai/nn/transformer/gpt/2019-radford.pdf.*$" "/doc/ai/nn/transformer/gpt/2/2019-radford.pdf";
+"~^/doc/ai/nn/transformer/gpt/2022-liu-3.pdf.*$" "/doc/ai/nn/transformer/gpt/2/2022-liu-3.pdf";
