--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -84,7 +84,8 @@ server {
           application/x-xz xz;
           text/yaml yaml;
           audio/wav wav;
-          video/mp4 mkv; }
+          video/mp4 mkv;
+          application/font-sfnt otf; }
 
         # force text files into UTF-8 to avoid 'mojibake':
         charset utf-8;
