--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9934,3 +9934,13 @@ default "";
 "~^/doc/reinforcement-learning/openai/2023-11-24-joashuachiam-onsamaltman.html.*$" "/doc/reinforcement-learning/openai/2023-11-24-joashuachiam-twitter-onsamaltman.html";
 "~^/doc/ai/nn/transformer/gpt/2019-radford.pdf.*$" "/doc/ai/nn/transformer/gpt/2/2019-radford.pdf";
 "~^/doc/ai/nn/transformer/gpt/2022-liu-3.pdf.*$" "/doc/ai/nn/transformer/gpt/2/2022-liu-3.pdf";
+"~^/doc/psychology/cognitive-bias/2009-kahneman.pdf.*$" "/doc/psychology/cognitive-bias/illusion-of-depth/2009-kahneman.pdf";
+"~^/doc/genetics/heritable/1987-plomin.pdf.*$" "https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3147063/";
+"~^/doc/ai/nn/transformer/gpt/dall-e/3/2023-11-30-gwern-dalle3-glitchartmezzotintofmoonfalling-16.jpg.*$" "/doc/ai/nn/transformer/gpt/dall-e/3/2023-11-30-gwern-dalle3-glitchartmezzotintofmoonfalling-01.jpg";
+"~^/doc/ai/nn/transformer/gpt/dall-e/3/2023-11-30-gwern-dalle3-glitchartmezzotintofmoonfalling-24.jpg.*$" "/doc/ai/nn/transformer/gpt/dall-e/3/2023-11-30-gwern-dalle3-glitchartmezzotintofmoonfalling-02.jpg";
+"~^/doc/ai/nn/transformer/gpt/dall-e/3/2023-11-30-gwern-dalle3-glitchartmezzotintofmoonfalling-32.jpg.*$" "/doc/ai/nn/transformer/gpt/dall-e/3/2023-11-30-gwern-dalle3-glitchartmezzotintofmoonfalling-03.jpg";
+"~^/doc/ai/nn/transformer/gpt/dall-e/3/2023-11-30-gwern-dalle3-redglitchartwireframecity-02.jpg.*$" "/doc/ai/nn/diffusion/midjourney/2023-11-30-gwern-midjourneyv5-redglitchartwireframecity-02.jpg";
+"~^/doc/ai/nn/transformer/gpt/dall-e/3/2023-11-30-gwern-dalle3-scifiglitchcity.jpg.*$" "/doc/ai/nn/diffusion/midjourney/2023-11-30-gwern-midjourneyv5-scifiglitchcity.jpg";
+"~^/doc/ai/nn/transformer/gpt/dall-e/3/2023-11-30-gwern-dalle3-settingsuninscificyberpunkcity-01.jpg.*$" "/doc/ai/nn/diffusion/midjourney/2023-11-30-gwern-midjourneyv5-settingsuninscificyberpunkcity-01.jpg";
+"~^/doc/ai/nn/transformer/gpt/dall-e/3/2023-11-30-gwern-dalle3-settingsuninscificyberpunkcity-02.jpg.*$" "/doc/ai/nn/diffusion/midjourney/2023-11-30-gwern-midjourneyv5-settingsuninscificyberpunkcity-02.jpg";
+"~^/doc/ai/nn/transformer/gpt/dall-e/3/2023-11-30-gwern-dalle3-woodblockprint-paintsplashedasiancastleswirl.jpg.*$" "/doc/ai/nn/diffusion/midjourney/2023-11-30-gwern-midjourneyv5-woodblockprint-paintsplashedasiancastleswirl.jpg";
