--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -14973,6 +14973,7 @@
 "~^/note/lizard$" "/note/lizardman";
 "~^/Research-criticis$" "/research-criticism";
 "~^/doc/nootropic/favicon.ico$" "/static/img/favicon.ico";
+"~^/doc/www/alumni.media.mit.edu/e725123d50d890052764eca932a42fc8a321d5b8.pdf.*$" "/doc/www/www.pensivepuffin.com/afb2cd187375fdbcf82115cd17a6c270f08b8d15.pdf";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
