--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9587,7 +9587,6 @@ default "";
 "~^/doc/vitamin-d/1992-chapuy-1.pdf.*$" "/doc/vitamin-d/1992-chapuy.pdf";
 "~^/doc/zeo/2008-wright-1.pdf.*$" "/doc/zeo/2008-wright.pdf";
 "~^/doc/zeo/2008-wright.pdf.*$" "/doc/zeo/2008-wright-2.pdf";
-"~^/doc/ai/nn/rnn/2010-mikolov.pdf.*$" "/doc/ai/nn/rnn/dynamic-evaluation/2010-mikolov.pdf";
 "~^/doc/psychiatry/bipolar/2022-mitchell-figure2-acnegeneticcorrelations.png.*$" "/doc/psychiatry/bipolar/genetics/2022-mitchell-figure2-acnegeneticcorrelations.png";
 "~^/doc/darknet-market/2023-goonetilleke.pdf.*$" "/doc/darknet-market/hydra/2023-goonetilleke.pdf";
 "~^/doc/darknet-market/2021-chainanalysis.pdf.*$" "/doc/darknet-market/hydra/2021-chainanalysis.pdf";
@@ -9944,3 +9943,24 @@ default "";
 "~^/doc/ai/nn/transformer/gpt/dall-e/3/2023-11-30-gwern-dalle3-settingsuninscificyberpunkcity-01.jpg.*$" "/doc/ai/nn/diffusion/midjourney/2023-11-30-gwern-midjourneyv5-settingsuninscificyberpunkcity-01.jpg";
 "~^/doc/ai/nn/transformer/gpt/dall-e/3/2023-11-30-gwern-dalle3-settingsuninscificyberpunkcity-02.jpg.*$" "/doc/ai/nn/diffusion/midjourney/2023-11-30-gwern-midjourneyv5-settingsuninscificyberpunkcity-02.jpg";
 "~^/doc/ai/nn/transformer/gpt/dall-e/3/2023-11-30-gwern-dalle3-woodblockprint-paintsplashedasiancastleswirl.jpg.*$" "/doc/ai/nn/diffusion/midjourney/2023-11-30-gwern-midjourneyv5-woodblockprint-paintsplashedasiancastleswirl.jpg";
+"~^/ad$" "/banner";
+"~^/doc/psychology/smell/2021-pellegrino.pdf.*$" "/doc/psychology/smell/human/2021-pellegrino.pdf";
+"~^/doc/psychology/smell/2021-meister.pdf.*$" "/doc/psychology/smell/human/2021-meister.pdf";
+"~^/doc/psychology/smell/2019-erskine.pdf.*$" "/doc/psychology/smell/human/2019-erskine.pdf";
+"~^/doc/psychology/smell/2006-porter.pdf.*$" "/doc/psychology/smell/human/2006-porter.pdf";
+"~^/doc/psychology/smell/1985-feynman-surelyyourejokingmrfeynman-bloodhound.pdf.*$" "/doc/psychology/smell/human/1985-feynman-surelyyourejokingmrfeynman-bloodhound.pdf";
+"~^/doc/psychology/smell/1932-brill.pdf.*$" "/doc/psychology/smell/human/1932-brill.pdf";
+"~^/doc/psychology/smell/1894-galton.pdf.*$" "/doc/psychology/smell/human/1894-galton.pdf";
+"~^/doc/economics/2017-sichel.pdf.*$" "/doc/economics/2022-sichel.pdf";
+"~^/doc/economics/2022-sichel.pdf.*$" "/doc/economics/automation/2022-sichel.pdf";
+"~^/doc/ai/scaling/hardware/2023-12-12-gavinuberti-podcastinterview-realtimeaiandthefutureofaihardwareecthedai-2.pdf.*$" "/doc/ai/scaling/hardware/2023-12-12-gavinuberti-podcastinterview-realtimeaiandthefutureofaihardwareecthedai.pdf";
+"~^/doc/psychology/1932-cavan.pdf.*$" "/doc/psychiatry/1932-cavan.pdf";
+"~^/doc/cat/biology/1982-burger.pdf.*$" "/doc/cat/biology/taurine/1982-burger.pdf";
+"~^/doc/cat/biology/1990-morris.pdf.*$" "/doc/cat/biology/taurine/1990-morris.pdf";
+"~^/doc/cat/biology/1992-lombardini-taurinenutritionalvalueandmechanismsofaction.pdf.*$" "/doc/cat/biology/taurine/1992-lombardini-taurinenutritionalvalueandmechanismsofaction.pdf";
+"~^/doc/cat/biology/taurine/1992-sturman-2-2.pdf.*$" "/doc/cat/biology/taurine/1992-sturman.pdf";
+"~^/doc/sociology/2021-xu.pdf.*$" "/doc/history/uighur/2021-xu.pdf";
+"~^/doc/biology/1999-holldobler.pdf.*$" "/doc/biology/ant/1999-holldobler.pdf";
+"~^/doc/biology/1976-holldobler.pdf.*$" "/doc/biology/ant/1976-holldobler.pdf";
+"~^/doc/biology/2001-pfeiffer.pdf.*$" "/doc/biology/ant/2001-pfeiffer.pdf";
+"~^/doc/cat/biology/taurine/1990-morris.pdf.*$" "/doc/cat/biology/taurine/1990-morris-2.pdf";
