--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -931,6 +931,7 @@ server {
         rewrite ^/www/(?<original>.*)$ /doc/www/$original permanent;
         rewrite ^/doc/www/nitter.moomoo.me/(?<original>.*)$ /doc/www/nitter.net/$original permanent;
         rewrite ^/doc/www/nitter.net/(?<original>.*)$ /doc/www/localhost/$original permanent;
+        rewrite ^/doc/(?<original>.*)/out.html$ /$original/index permanent;
 
         rewrite ^/[a-z0-9-]+/[a-z0-9-]+/doc/(?<original>.*)$ /doc/$original permanent;
         rewrite ^/[a-z0-9-]+/[a-z0-9-]+/[a-z0-9-]+/doc/(?<original>.*)$ /doc/$original permanent;
