clean up yesterday's updates

--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -15050,6 +15050,69 @@
 "~^/Silk-Road3*$" "/silk-road";
 "~^/blogs$" "/index#footer";
 "~^/repos\?.*$" "https://github.com/gwern/gwern.net/";
+"~^/doc/personal/2012-A8ADV8Kq$" "/doc/personal/index";
+"~^/doc/psychology/2019-hsu.pdf%C2.*$" "/doc/psychology/2019-hsu.pdf";
+"~^/doc/psychology/2008-evans.pdf%C2.*$" "/doc/psychology/2008-evans.pdf";
+"~^/.*/Spaced-repetition$" "/spaced-repetition";
+"~^/japanese/teika$" "/doc/japan/poetry/teika/index";
+"~^/doc/www/www.benkuhn.net/null$" "https://www.benkuhn.net/";
+"~^/doc/rotten.*/Bitcoin$" "/doc/bitcoin/index";
+"~^/doc/rotten..*Death-Note-script$" "/death-note-script";
+"~^/doc/rotten.*/2002-scholz-radiance$" "/doc/radiance/2002-scholz-radiance";
+"~^/doc/longevit-y-/-2019-decabo\.pdf.*$" "/doc/longevity/2019-decabo.pdf";
+"~^/doc/iodine/1972-fierro-ben%EF%BF%BD%EF%BF%BD.*$" "/doc/iodine/1972-fierrobenitez.pdf";
+"~^/doc/fiction/2009-12-18-%EF%BF%BD%EF%BF%BD%EF%BF%BD%EF%BF%BD%EF%BF%BD%EF%BF%BD$" "/doc/anime/2009-12-18-緑華野菜子-pixiv7701090-greenseevee-encolor.tar";
+"~^/doc/cat/tatarian-honeysuckle/$" "/doc/cat/psychology/drug/tatarian-honeysuckle/index";
+"~^/doc/ai/poetry/2019-07-63VA.*$" "/doc/ai/poetry/";
+"~^/.*/docs/eva/2004-okada$" "/doc/eva/2004-okada";
+"~^/Lorem/.*$" "/lorem";
+"~^/index%E5%BC%80%E5%A7.*$" "/index";
+"~^/haskell/gwern.net$" "https://github.com/gwern/gwern.net/";
+"~^/GREENLAND$" "/greenland";
+"~^/doc/wikipedia/%C2.*$" "/doc/wikipedia/";
+"~^/doc/rotten.com/library/-index.html$" "/doc/rotten.com/library/-index.html";
+"~^/doc/.*/The-Last-Muezzin$" "/fiction/the-last-muezzin";
+"~^/doc/rotten.com/library/death/e$" "/doc/rotten.com/library/death/execution/index.html";
+"~^/doc/.*/Dinosaur-Comics$" "/fiction/dinosaur-comics";
+"~^/doc/.*/Chapter-1.1$" "/sicp/chapter-1-1";
+"~^/doc/psychology/personality/psychopathy/narcissism/index$" "";
+"~^/doc/psychology/2020-6vS.*$" "/doc/psychology/index";
+"~^/doc/psychology/1949-hovland$" "/doc/psychology/1949-hovland-theamericansoldier-v3-experimentsonmasscommunication.pdf";
+"~^/doc/philosophy/mind/2004-1$" "/doc/philosophy/mind/index";
+"~^/doc/philosophy/%C3%83%.*$" "/doc/philosophy/index";
+"~^/doc/music/music-distraction/1989-salame$" "/doc/music/music-distraction/1989-salame.pdf";
+"~^/doc/[Ll]5.*$" "/doc/index";
+"~^/doc/iq/high/smpy/1986-renzulli$" "/doc/iq/high/smpy/1986-renzulli-systemsandmodelsforprogramsforgiftedtalented.pdf";
+"~^/doc/.*/RNN-metadata$" "/rnn-metadata";
+"~^/doc/fiction/science-fiction/frank-herbert/1980-omni-se$" "/doc/fiction/science-fiction/frank-herbert/1980-omni-july.pdf";
+"~^/doc/e-va/1996-newtype-anno-interview$" "/doc/anime/eva/1996-newtype-anno-interview";
+"~^/doc/economics/1949-hoff$" "/doc/economics/1949-hoff-economiccalculationinthesocialistsociety.pdf";
+"~^/doc/bitcoin/1986-ijiri$" "/doc/bitcoin/1986-ijiri.pdf";
+"~^/Comp$" "/complement";
+"~^/complexity-vs-AI$" "/complexity-vs-ai";
+"~^/dual_n-back$" "/dnb-faq";
+"~^/doc/ai/1962WGT$" "/doc/ai/index";
+"~^/doc/ai/nn/%C2%BF$" "/doc/ai/nn/index";
+"~^/doc/sr/2019-04$" "/doc/darknet-market/2019-04-22-deepdotweb-dnmlist.html";
+"~^/doc/cilture/2010-dobelli\.pdf.*$" "/doc/culture/2010-dobelli.pdf";
+"~^/doc/2$" "/doc/index";
+"~^/doc/psychology/2013-hurlbert\.pdf.*$" "/doc/psychology/inner-monologue/2013-hurlburt.pdf";
+"~^/doc/psychology/okcupid/10%C3%B0$" "/doc/psychology/okcupid/index";
+"~^/doc/psychology/the4bigmythsofprofilepictures.html$" "/doc/psychology/okcupid/the4bigmythsofprofilepictures.html";
+"~^/doc/psychology/okcupid/weexperimentonhumanbeings$" "/doc/psychology/okcupid/weexperimentonhumanbeings.html";
+"~^/doc/rotten.com/library/history/wmd/$" "/doc/rotten.com/library/history/war/wmd/index.html";
+"~^/doc/coinflip-valuecurves.png$" "/doc/statistics/decision/gwern-coinflip-gamecurves.png";
+"~^/doc/rotten.com/library/culture/The_Matrix/index.html$" "/doc/rotten.com/library/culture/the-matrix/index.html";
+"~^/gpt-2-preference-learning/$" "/gpt-2-preference-learning";
+"~^/haskell/0$" "/haskell/index";
+"~^/index.xml$" "/index";
+"~^/IQ-Income$" "/note/IQ-Income";
+"~^/note/0$" "/note/index";
+"~^/Iq$" "/iq";
+"~^/static/font/IBMPlexMono-RegularItalic.otf$" "/static/font/ibm-plex-mono/IBMPlexMono-RegularItalic.otf";
+"~^/touho$" "/touhou";
+"~^/zeo/caffine$" "/zeo/caffeine";
+"~^/zeo/Vitamin$" "/zeo/vitamin-d";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
