fix xotd code (hard to see that the quotes.hs db was broken)

--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -932,6 +932,8 @@ server {
         rewrite ^/doc/www/nitter.moomoo.me/(?<original>.*)$ /doc/www/nitter.net/$original permanent;
         rewrite ^/doc/www/nitter.net/(?<original>.*)$ /doc/www/localhost/$original permanent;
         rewrite ^/doc/(?<original>.*)/out.html$ /$original/index permanent;
+        rewrite ^/doc/misc/(?<original>.*)$ /doc/www/misc/$original permanent;
+        rewrite ^/misc/(?<original>.*)$ /doc/www/misc/$original permanent;
 
         rewrite ^/[a-z0-9-]+/[a-z0-9-]+/doc/(?<original>.*)$ /doc/$original permanent;
         rewrite ^/[a-z0-9-]+/[a-z0-9-]+/[a-z0-9-]+/doc/(?<original>.*)$ /doc/$original permanent;
