--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -15113,6 +15113,7 @@
 "~^/touho$" "/touhou";
 "~^/zeo/caffine$" "/zeo/caffeine";
 "~^/zeo/Vitamin$" "/zeo/vitamin-d";
+"~^/[Ll][Aa][Rr][Pp]$" "/larping";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
