--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -100,7 +100,7 @@ server {
 
         # server-side includes <https://en.wikipedia.org/wiki/Server_Side_Includes>:
         ## used in templating for the includes to avoid the need for full site rebuilds. Can just rsync up & expire cache.
-        ssi on; # http://nginx.org/en/docs/http/ngx_http_ssi_module.html
+        ssi on; # http://nginx.org/en/docs/http/ngx_http_ssi_module.html default: applies to all files served with 'text/html' MIME type
 
         # begin redirect rewrites: for cases where a more powerful regexp match-and-replace is required
 
