--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -14972,7 +14972,6 @@
 "~^/Research-criticis$" "/research-criticism";
 "~^/doc/nootropic/favicon.ico$" "/static/img/favicon.ico";
 "~^/doc/www/alumni.media.mit.edu/e725123d50d890052764eca932a42fc8a321d5b8.pdf.*$" "/doc/www/www.pensivepuffin.com/afb2cd187375fdbcf82115cd17a6c270f08b8d15.pdf";
-
 "~^/doc/ai/nn/rnn/dynamic-evaluation/index.*$" "/doc/ai/nn/dynamic-evaluation/index";
 "~^/doc/rotten.*/2008-nakamoto$" "/doc/bitcoin/2008-nakamoto";
 "~^/static/img/icon/erowid-old.svg$" "/static/img/icon/erowid.svg";
@@ -15114,6 +15113,52 @@
 "~^/zeo/caffine$" "/zeo/caffeine";
 "~^/zeo/Vitamin$" "/zeo/vitamin-d";
 "~^/[Ll][Aa][Rr][Pp]$" "/larping";
+"~^/Pageviews-\~-.*$" "/banner";
+"~^/Who-Buys-Fonts.*$" "/font";
+"~^/doc/ai/2020-neumann\.pdf.*$" "/doc/ai/index";
+"~^/doc/anime/.inflation.*$" "/doc/anime/index";
+"~^/doc/cat/catnip/survey/index$" "/doc/cat/psychology/drug/catnip/survey/index";
+"~^/doc/darknet-market/2013-08-14-sVyVIUHS$" "/doc/darknet-market/2013-08-14-gwernforumdiscussion.html.maff";
+"~^/doc/darknet-market/2013-cwcgplwA$" "/doc/darknet-market/index";
+"~^/doc/economics/2005-wu.pdfo$" "/doc/economics/2005-wu.pdf";
+"~^/doc/nootropic/quantified-self/2015-%C2%BF$" "/doc/nootropic/quantified-self/index";
+"~^/doc/reinforcement-learning/armstrong-controlproblem/%C2%BF$" "/doc/reinforcement-learning/armstrong-controlproblem/index.html";
+"~^/doc/rotten.*/2005-sawaragi$" "/doc//eva/2005-sawaragi";
+"~^/doc/sr/2015-interpol$" "/doc/darknet-market/2015-interpol-pharmaceuticals.pdf";
+"~^/doc/statistics/decision/1961-raiffa-appliedstatisticaldecisiontheory.pd.aspx$" "/doc/statistics/decision/1961-raiffa-appliedstatisticaldecisiontheory.pdf";
+"~^/doc/statistics/decision/2016-08-20-%C3%B0$" "/doc/statistics/decision/2016-08-20-candyjapan-decisiontree-n9.csv";
+"~^/doc/traffic/2013-guernmet-anongmousfeedbackcolClassosc$" "/doc/traffic/2013-gwern-gwernnet-anonymousfeedback.csv";
+"~^/doc/www/blog.cryptographyengineering.com/2169276faf5f3e534907951b369e392e0d7c3a9e.htmlgwern.*$" "/doc/www/blog.cryptographyengineering.com/2169276faf5f3e534907951b369e392e0d7c3a9e.html";
+"~^/facegwern.net35.*$" "/face";
+"~^/nootropic/Wikipedia-and-Other-Wikis$" "/wikipedia-and-other-wikis";
+"~^/note/%C3%82%C2%BF$" "/note/index";
+"~^/rnn-metadatagwern.net3.*$" "/rnn-metadata";
+"~^/sicp/Introduction.shtml$" "/sicp/introduction";
+"~^/static/img/logo/logo-original.svg.back$" "/static/img/logo/logo-original.svg";
+"~^/DNB_FAQ$" "/dnb-faq";
+"~^/Ni$" "/nicotine";
+"~^/docSternberg,-R.-J.-\(1984\).-Toward-a-triarchic-theory-of-human-intelligence.-The-Behavioral-and-Brain-Sciences,-7,-269-315.iq/1927-spearman-theabilitiesofman\.pdf.*$" "/doc/iq/1927-spearman-theabilitiesofman.pdf";
+"~^/doc/dnb/2012-doyle\.pdf.*$" "/doc/music/music-distraction/2012-doyle.pdf";
+"~^/rss-subscriptions.opml$" "/doc/personal/rss-subscriptions.opml";
+"~^/doc/rotten.com/libarty/index.html$" "/doc/rotten.com/library/index.html";
+"~^/nootropic/index.html$" "/doc/nootropic/index";
+"~^/doc/statistics/-comparison/1978-elo-theratingofchessplayerspastandpresent\.pdf.*$" "/doc/statistics/order/comparison/1978-elo-theratingofchessplayerspastandpresent.pdf";
+"~^/doc/design/www/arxiv.org/ba41fbdb0a770d750b01b2d0a12a59afa651081a\.pdf.*$" "/doc/www/arxiv.org/ba41fbdb0a770d750b01b2d0a12a59afa651081a.pdf";
+"~^/doc/cs/security/www/research.checkpoint.com/50121d9fabf664329d72ca9579c7ed6a6f577535.html$" "/doc/www/research.checkpoint.com/50121d9fabf664329d72ca9579c7ed6a6f577535.html";
+"~^/The-3-1$" "/3-grenades";
+"~^/NmPR$" "/index";
+"~^/LARPin$" "/larping";
+"~^/review/Bakwell$" "/review/bakewell";
+"~^/booklist$" "/review/book";
+"~^/Cat-sense$" "/review/cat";
+"~^/static/annotations.js$" "/static/js/annotations.js";
+"~^/turing$" "/turing-complete";
+"~^/newsletter/2017/Site-traffic$" "/traffic#january-2017---july-2017";
+"~^/Turing-Co$" "/turing-complete";
+"~^/TWDNF$" "/twdne";
+"~^/ranking$" "/resorter";
+"~^/Waterko$" "/water";
+"~^//rss.xml$" "https://gwern.substack.com/feed";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
