--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9964,3 +9964,4 @@ default "";
 "~^/doc/biology/1976-holldobler.pdf.*$" "/doc/biology/ant/1976-holldobler.pdf";
 "~^/doc/biology/2001-pfeiffer.pdf.*$" "/doc/biology/ant/2001-pfeiffer.pdf";
 "~^/doc/cat/biology/taurine/1990-morris.pdf.*$" "/doc/cat/biology/taurine/1990-morris-2.pdf";
+"~^/doc/cat/biology/1851-mayhew-londlabourandthelondonpoor-v1-thecatsmeatman.pdf.*$" "/doc/cat/biology/1851-mayhew-londonlabourandthelondonpoor-v1-thecatsmeatman.pdf";
