--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9965,3 +9965,5 @@ default "";
 "~^/doc/biology/2001-pfeiffer.pdf.*$" "/doc/biology/ant/2001-pfeiffer.pdf";
 "~^/doc/cat/biology/taurine/1990-morris.pdf.*$" "/doc/cat/biology/taurine/1990-morris-2.pdf";
 "~^/doc/cat/biology/1851-mayhew-londlabourandthelondonpoor-v1-thecatsmeatman.pdf.*$" "/doc/cat/biology/1851-mayhew-londonlabourandthelondonpoor-v1-thecatsmeatman.pdf";
+"~^/doc/fiction/project_muse_215134.pdf.*$" "/doc/fiction/2007-larsen.pdf";
+"~^/doc/iq/1938-bulher.pdf.*$" "/doc/iq/1938-buhler.pdf";
